fix scroll spacing for items

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -372,7 +372,7 @@ input[type=submit]:hover {
 .lists-main {
     margin-left: var(--sidenav-width);
     border-radius: 25px 0 0 25px;
-    background: var(--light-alt);
+    background: var(--light);
     height: 100vh;
     overflow: scroll;
 }
@@ -387,11 +387,15 @@ input[type=submit]:hover {
 
 .items-header {
     /* height: 15vh; */
+    padding: 25px;
     position: fixed;
+    background-color: var(--light);
+    width: 100vw;
+    top: 0;
 }
 
 .items {
-    margin-top: 150px;
+    margin-top: 100px;
 }
 
 .items ul {
